<resources>
    <string name="app_name">Demo PRINT-9</string>

    <string name="no_printer_selected">No Printer Selected</string>
    <string name="no_recently_selected_printers">No Recently Selected Printers</string>
    <string name="no_printers_found">No Printers Found</string>
    <string name="disconnect_printer">Disconnect Printer</string>
    <string name="discover_printers">Discover Printers</string>
    <string name="manually_connect">Manually Connect</string>
    <string name="recently_selected">Recently Selected</string>
    <string name="discovered_printers">Discovered Printers</string>
    <string name="available_templates">Available Templates</string>
    <string name="no_templates_found">No Templates Found</string>
    <string name="photo">Photo</string>
    <string name="print">IMPRIMIR</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="retry">Retry</string>
    <string name="printer_dns_ip_address">Printer DNS/IP Address</string>
    <string name="dialog_title_disconnect_printer">Disconnect Printer?</string>
    <string name="dialog_message_disconnect_printer">This will disconnect the current printer.</string>
    <string name="dialog_title_manually_connect">Manually Connect to Printer</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="processing_nfc_scan">Processing NFC Scan&#8230;</string>
    <string name="unable_to_find_nfc_printer">Unable to find specified NFC printer</string>
    <string name="error_scanning_nfc_tag">Error scanning NFC tag</string>
    <string name="requesting_usb_permission">Requesting USB permission&#8230;</string>
    <string name="usb_permission_denied">USB permission denied</string>
    <string name="dialog_message_printing_error">Template could not be printed.</string>
    <string name="dialog_message_template_read_error">Template could not be read.</string>
    <string name="printing_template">Printing template&#8230;</string>
    <string name="error">Error</string>
    <string name="printing_error">Printing Error</string>
    <string name="template_read_error">Template Read Error</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="settings">Settings</string>
    <string name="file_storage">File Storage</string>
    <string name="template_directory">Template Directory</string>
    <string name="template_directory_summary">The directory where template files are stored</string>
    <string name="template_image_directory">Template Image Directory</string>
    <string name="template_image_directory_summary">The directory where template image files are stored</string>
    <string name="select_directory">Select Directory</string>
    <string name="file_size">File Size</string>
    <string name="parent_directory">Parent Directory</string>
    <string name="no_files_found">No files found</string>
    <string name="select">Select</string>
    <string name="unable_to_set_template_directory_message">Unable to set template directory: %1$s</string>
    <string name="unable_to_set_template_image_directory_message">Unable to set template image directory: %1$s</string>
    <string name="error_saving_template_message">Error saving template %1$s: %2$s</string>
    <string name="error_printer_template_message">Job ID %1$d was cancelled with error: %2$s</string>
    <string name="print_job_finished_successfully">Print job finished successfully</string>
    <string name="print_job_cancelled">Print job cancelled</string>
    <string name="print_job_cancelled_with_error_message">Print job cancelled with error: %1$s</string>
    <string name="quantity">Quantity</string>
    <string name="retrieving_template_variables">Retrieving template variables&#8230;</string>
    <string name="unable_to_retrieve_template_variables_message">Error retrieving template variables: %1$s</string>
    <string name="no_template_variables_found">No template variables found</string>
    <string name="printer_model_not_supported">Printer model not supported</string>
    <string name="no_printer_model_found">No printer model found</string>
    <string name="error_discovering_printers_message">Error discovering printers: %1$s</string>
    <string name="error_manually_connecting_to_printer_message">Error manually connecting to printer: %1$s</string>
    <string name="unable_to_find_ip_address_input">Unable to find IP Address input</string>
    <string name="sending_template_job_to_printer">Sending template job to printer&#8230;</string>
    <string name="alarm_encountered">Alarm Encountered</string>
    <string name="alarm_encountered_message">Job with job ID %1$d encountered alarm [%2$s]. Either fix the alarm and click %3$s once the job begins again or click %4$s to cancel the job.</string>
    <string name="storage_permissions_granted">Storage permissions granted</string>
    <string name="storage_permissions_denied">Storage permissions denied. Grant storage permissions to proceed.</string>
    <string name="storage_permissions_request_enable_message">Storage permissions denied automatically due to \"Never ask again\" being enabled. Grant storage permissions in your device settings and try again.</string>
    <string name="zebra_technologies">&#169; Zebra Technologies Corporation 2018</string>
    <string name="prime_technologies">&#169; Aidc Tecnologia Ltda 2019</string>
    <string name="application_version">Version 1.0</string>
</resources>
