<?xml version="1.0" encoding="utf-8"?>
<!--
/***********************************************
 * CONFIDENTIAL AND PROPRIETARY
 *
 * The source code and other information contained herein is the confidential and exclusive property of
 * ZIH Corp. and is subject to the terms and conditions in your end user license agreement.
 * This source code, and any other information contained herein, shall not be copied, reproduced, published,
 * displayed or distributed, in whole or in part, in any medium, by any means, for any purpose except as
 * expressly permitted under such license agreement.
 *
 * Copyright ZIH Corp. 2018
 *
 * ALL RIGHTS RESERVED
 ***********************************************/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zebra.printstationcard.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/noPrinterSelectedContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/container_margin"
        android:background="@android:color/white"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        tools:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_container_padding"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/zebra_custom_button_text"
            android:textStyle="bold"
            android:text="@string/no_printer_selected"
            android:drawableTop="@drawable/ic_lg_error"
            android:drawablePadding="@dimen/header_container_padding"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/printerSelectedContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/container_margin"
        android:padding="@dimen/header_container_padding"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:background="@android:color/white"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        tools:visibility="visible">

        <com.zebra.zebraui.ZebraPrinterView
            android:id="@+id/printerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/header_container_padding" />

        <TextView
            android:id="@+id/printerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="@dimen/zebra_custom_button_text"
            tools:text="Printer Model" />

        <TextView
            android:id="@+id/printerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="italic"
            tools:text="192.168.0.1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/container_margin"
        android:layout_marginRight="@dimen/container_margin"
        android:layout_marginBottom="@dimen/container_margin"
        android:orientation="vertical"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zebra_chevron_button_height"
            android:paddingLeft="@dimen/zebra_field_padding_horizontal"
            android:paddingRight="@dimen/zebra_field_padding_horizontal"
            android:gravity="center_vertical"
            android:textColor="@color/zebra_blue"
            android:textStyle="bold"
            android:textSize="@dimen/zebra_custom_button_text"
            android:textAllCaps="true"
            android:text="@string/available_templates" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:background="@color/zebra_blue" />

        <ListView
            android:id="@+id/templateList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/noTemplatesFoundContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/zebra_field_padding_vertical"
            android:paddingBottom="@dimen/zebra_field_padding_vertical"
            android:paddingLeft="@dimen/zebra_field_padding_horizontal"
            android:paddingRight="@dimen/zebra_field_padding_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:layout_width="@dimen/no_printers_found_icon_size"
                android:layout_height="@dimen/no_printers_found_icon_size"
                android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                android:src="@drawable/ic_lg_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/no_templates_found" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>