<?xml version="1.0" encoding="utf-8"?>
<!--
/***********************************************
 * CONFIDENTIAL AND PROPRIETARY
 *
 * The source code and other information contained herein is the confidential and exclusive property of
 * ZIH Corp. and is subject to the terms and conditions in your end user license agreement.
 * This source code, and any other information contained herein, shall not be copied, reproduced, published,
 * displayed or distributed, in whole or in part, in any medium, by any means, for any purpose except as
 * expressly permitted under such license agreement.
 *
 * Copyright ZIH Corp. 2018
 *
 * ALL RIGHTS RESERVED
 ***********************************************/
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/container_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zebra_chevron_button_height"
                        android:paddingLeft="@dimen/zebra_field_padding_horizontal"
                        android:paddingRight="@dimen/zebra_field_padding_horizontal"
                        android:gravity="center_vertical"
                        android:textAllCaps="true"
                        android:textColor="@color/zebra_blue"
                        android:textStyle="bold"
                        android:textSize="@dimen/zebra_custom_button_text"
                        android:text="@string/recently_selected" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_width"
                        android:background="@color/zebra_blue" />

                    <LinearLayout
                        android:id="@+id/recentlySelectedPrintersList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:id="@+id/noRecentlySelectedPrintersContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/zebra_field_padding_vertical"
                        android:paddingBottom="@dimen/zebra_field_padding_vertical"
                        android:paddingLeft="@dimen/zebra_field_padding_horizontal"
                        android:paddingRight="@dimen/zebra_field_padding_horizontal"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/no_printers_found_icon_size"
                            android:layout_height="@dimen/no_printers_found_icon_size"
                            android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                            android:src="@drawable/ic_lg_error" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/no_recently_selected_printers" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/container_margin"
                    android:orientation="vertical"
                    android:background="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zebra_chevron_button_height"
                        android:paddingLeft="@dimen/zebra_field_padding_horizontal"
                        android:paddingRight="@dimen/zebra_field_padding_horizontal"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAllCaps="true"
                            android:textColor="@color/zebra_blue"
                            android:textStyle="bold"
                            android:textSize="@dimen/zebra_custom_button_text"
                            android:text="@string/discovered_printers" />

                        <ImageView
                            android:id="@+id/addPrinterButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_add" />

                        <ImageView
                            android:id="@+id/refreshPrintersButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:layout_marginLeft="@dimen/zebra_field_padding_horizontal"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_refresh" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_width"
                        android:background="@color/zebra_blue" />

                    <LinearLayout
                        android:id="@+id/discoveredPrintersList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:id="@+id/noPrintersFoundContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/zebra_field_padding_vertical"
                        android:paddingBottom="@dimen/zebra_field_padding_vertical"
                        android:paddingLeft="@dimen/zebra_field_padding_horizontal"
                        android:paddingRight="@dimen/zebra_field_padding_horizontal"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/no_printers_found_icon_size"
                            android:layout_height="@dimen/no_printers_found_icon_size"
                            android:layout_marginRight="@dimen/zebra_field_padding_horizontal"
                            android:src="@drawable/ic_lg_error" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/no_printers_found" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/overlay_progress" />

        </FrameLayout>

    </FrameLayout>

</ScrollView>